# WordFreq

./: .gitignore  README  README.markdown  WordFreq-Simple.hs  WordFreq.hs  assignment.txt  wordfreq.cabal
WordFreq/: Printer.hs  Simple.hs  State.hs
WordFreq/Printer/: Histogram.hs
WordFreq/Reader/: Text.hs
